# Display-to-Light-Panels

./: .gitignore  CMakeLists.txt  LICENSE  Main.qml  README.md  displaywindow.cpp  displaywindow.h  displaywindow.ui  internalmessagebroker.hpp  main.cpp  main.qml  qml.qrc  screenmodel.cpp  screenmodel.h
